# prune-github-repo-for-ai-context-engineering

./: README.md  config.yaml  pyproject.toml  repo_distiller.py  repomix-output.xml  requirements.txt
docs/: tech-specs.md  user-manual.md
logs/: .gitkeep  log_20251214_200725.txt  log_20251214_200800.txt  log_20251214_211007.txt  log_20251214_211225.txt  log_20251214_211324.txt  log_20251214_211502.txt
src/: repo_distiller.py
tests/: .gitkeep  test_distiller.py  test_priority_cascade.py
