[project]
name = "repository-distiller"
version = "1.1.1"
description = "CLI utility to create filtered, context-optimized copies of source repositories for LLM consumption."
requires-python = ">=3.7"
dependencies = ["pyyaml"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
